--- a/property.html
+++ b/property.html
@@ -87,11 +87,298 @@
         <section class="section section__projects">
             <div class="project__container">
                 <div class="project__content">
-                    <ul class="button__tabs">
+                    <!-- <ul class="button__tabs">
                         <li><h2><a href="#completed-project"  class="project__links">Completed Project</a></h2></li>
                         <li><h2><a href="#current-project" class="project__links">Current Project</a></h2></li>
+                    </ul> -->
+                    <!-- Tab navigation -->
+                    <ul class="nav nav-tabs button__tabs" id="projectTabs" role="tablist">
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link active project__links" id="completed-projects-tab" data-bs-toggle="tab" data-bs-target="#completed-projects" type="button" role="tab" aria-controls="completed-projects" aria-selected="true">Completed Project</button>
+                        </li>
+                        <li class="nav-item" role="presentation">
+                            <button class="nav-link project__links" id="current-projects-tab" data-bs-toggle="tab" data-bs-target="#current-projects" type="button" role="tab" aria-controls="current-projects" aria-selected="false">Current Project</button>
+                        </li>
                     </ul>
-                    <div class="project__cards" id="completed-projects">
+                    <!-- Tab content -->
+                    <div class="tab-content" id="projectTabsContent">
+                        <!-- COMPLETED PROJECT CARDS -->
+                        <div class="tab-pane fade show active project__cards" id="completed-projects" role="tabpanel" aria-labelledby="completed-projects-tab">
+                            <!-- Example card for completed projects -->
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-01.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-03.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-08.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-09.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-19.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-16.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-25.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-30.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-28.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-31.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-29.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                        </div>
+
+
+                        <!-- CURRENT PROJECT CARDS -->
+                        <!-- <div class="tab-pane fade project__cards" id="current-projects" role="tabpanel" aria-labelledby="current-projects-tab">
+                            
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-03.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-08.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-09.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-19.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-16.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-25.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-30.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-28.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-31.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-29.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                            <div class="project__card">
+                                <div class="project__image">
+                                    <a href="" class="project">
+                                    <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
+                                    </a>
+                                </div>
+                                <div class="project__text">
+                                    <h3>London House</h3>
+                                    <p>2 Bedroom Flat</p>
+                                </div>
+                            </div>
+                        </div> -->
+                    </div>
+
+                    <!-- <div class="project__cards" id="completed-projects">
                         <div class="project__card">
                             <div class="project__image">
                                 <a href="" class="project">
@@ -358,7 +645,7 @@
                                 <p>2 Bedroom Flat</p>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
                     <button class="button red-button" id="button__more">
                         <div class="button-content">
                             <span class="text">See More</span>
@@ -444,6 +731,8 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <!-- Bootstrap JS (necessary for Bootstrap's JavaScript plugins) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/js/property.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
