--- a/property.html
+++ b/property.html
@@ -103,7 +103,7 @@
                             <!-- Example card for completed projects -->
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-01.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -114,7 +114,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-03.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -125,7 +125,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-08.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -136,7 +136,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-09.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -147,7 +147,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-19.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -158,7 +158,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-16.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -169,7 +169,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-25.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -180,7 +180,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-30.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -191,7 +191,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-28.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -202,7 +202,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-31.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -213,7 +213,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-29.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -224,7 +224,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -241,7 +241,7 @@
                             
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -252,7 +252,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-03.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -263,7 +263,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-08.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -274,7 +274,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-09.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -285,7 +285,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-19.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -296,7 +296,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-16.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -307,7 +307,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-25.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -318,7 +318,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-30.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -329,7 +329,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-28.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -340,7 +340,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-31.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -351,7 +351,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-29.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
@@ -362,7 +362,7 @@
                             </div>
                             <div class="project__card">
                                 <div class="project__image">
-                                    <a href="" class="project">
+                                    <a href="property-details.html" class="project">
                                     <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
                                     </a>
                                 </div>
